--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -18,7 +19,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,10 +30,67 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
+      <div class="row">
+        <div hour='10' class="hour col-1 col-1">10AM</div>
+        <div class="time-block col-10" id='normal'>
+          <p class='description'>Your Mama Placeholder</p>
+        </div>
+        <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row">
+        <div hour='11' class="hour col-1">11AM</div>
+        <div class="time-block col-10" id='normal'>
+          <p class='description'>Your Mama Placeholder</p>
+        </div>
+        <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row">
+        <div hour='12' class="hour col-1">12PM</div>
+        <div class="time-block col-10" id='normal'>
+          <p class='description'>Your Mama Placeholder</p>
+        </div>
+        <button class="saveBtn col-1 "><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row">
+        <div hour='13' class="hour col-1">1PM</div>
+        <div class="time-block col-10" id='normal'>
+          <p class='description'>Your Mama Placeholder</p>
+        </div>
+        <button  class="saveBtn col-1"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row">
+        <div hour='14' class="hour col-1">2PM</div>
+        <div class="time-block col-10" id='normal'>
+          <p class='description'>Your Mama Placeholder</p>
+        </div>
+        <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row">
+        <div hour='15' class="hour col-1">3PM</div>
+        <div class="time-block col-10" id='normal'>
+          <p class='description'>Your Mama Placeholder</p>
+        </div>
+        <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row">
+        <div hour='16' class="hour col-1">4PM</div>
+        <div class="time-block col-10" id='normal'>
+          <p class='description'>Your Mama Placeholder</p>
+        </div>
+        <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row">
+        <div hour='17' class="hour col-1">5PM</div>
+        <div class="time-block col-10" id='normal'>
+          <p class='description'>Your Mama Placeholder</p>
+        </div>
+        <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
+      </div>
 
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+   <script src= "https://cdnjs.cloudflare.com/ajax/libs/luxon/2.0.1/luxon.min.js"></script>
+    <script src='./assets/js/script.js'></script>
   </body>
 </html>
