--- a/index.html
+++ b/index.html
@@ -31,58 +31,65 @@
     </header>
     <div class="container">
       <div class="row">
+        <div hour='10' class="hour col-1 col-1">9AM</div>
+        <div class="time-block col-10" id='normal'>
+          <p class='description'></p>
+        </div>
+        <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row">
         <div hour='10' class="hour col-1 col-1">10AM</div>
         <div class="time-block col-10" id='normal'>
-          <p class='description'>Your Mama Placeholder</p>
+          <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
         <div hour='11' class="hour col-1">11AM</div>
         <div class="time-block col-10" id='normal'>
-          <p class='description'>Your Mama Placeholder</p>
+          <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
         <div hour='12' class="hour col-1">12PM</div>
         <div class="time-block col-10" id='normal'>
-          <p class='description'>Your Mama Placeholder</p>
+          <p class='description'></p>
         </div>
         <button class="saveBtn col-1 "><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
         <div hour='13' class="hour col-1">1PM</div>
         <div class="time-block col-10" id='normal'>
-          <p class='description'>Your Mama Placeholder</p>
+          <p class='description'></p>
         </div>
         <button  class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
         <div hour='14' class="hour col-1">2PM</div>
         <div class="time-block col-10" id='normal'>
-          <p class='description'>Your Mama Placeholder</p>
+          <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
         <div hour='15' class="hour col-1">3PM</div>
         <div class="time-block col-10" id='normal'>
-          <p class='description'>Your Mama Placeholder</p>
+          <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
         <div hour='16' class="hour col-1">4PM</div>
         <div class="time-block col-10" id='normal'>
-          <p class='description'>Your Mama Placeholder</p>
+          <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
         <div hour='17' class="hour col-1">5PM</div>
         <div class="time-block col-10" id='normal'>
-          <p class='description'>Your Mama Placeholder</p>
+          <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
