--- a/index.html
+++ b/index.html
@@ -31,63 +31,63 @@
     </header>
     <div class="container">
       <div class="row">
-        <div class="col-1 col-1">9AM</div>
+        <div class="col-1 time">9AM</div>
         <div hour='9' class="time-block col-10 hour" id='normal'>
           <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
-        <div class="col-1 col-1">10AM</div>
+        <div class="col-1 time">10AM</div>
         <div hour='10' class="time-block col-10 hour" id='normal'>
           <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
-        <div class="col-1">11AM</div>
+        <div class="col-1 time">11AM</div>
         <div hour='11' class="time-block col-10 hour" id='normal'>
           <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
-        <div class="col-1">12PM</div>
+        <div class="col-1 time">12PM</div>
         <div hour='12' class="time-block col-10 hour" id='normal'>
           <p class='description'></p>
         </div>
         <button class="saveBtn col-1 "><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
-        <div class="col-1">1PM</div>
+        <div class="col-1 time">1PM</div>
         <div hour='13' class="time-block col-10 hour" id='normal'>
           <p class='description'></p>
         </div>
         <button  class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
-        <div class="col-1">2PM</div>
+        <div class="col-1 time">2PM</div>
         <div  hour='14' class="time-block col-10 hour" id='normal'>
           <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
-        <div class="col-1">3PM</div>
+        <div class="col-1 time">3PM</div>
         <div hour='15' class="time-block col-10 hour" id='normal'>
           <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
-        <div class="col-1">4PM</div>
+        <div class="col-1 time">4PM</div>
         <div hour='16' class="time-block col-10 hour" id='normal'>
           <p class='description'></p>
         </div>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
       <div class="row">
-        <div class="col-1">5PM</div>
+        <div class="col-1 time">5PM</div>
         <div hour='17' class="time-block col-10 hour" id='normal'>
           <p class='description'></p>
         </div>
