refactored code/cleaned up layout

--- a/index.html
+++ b/index.html
@@ -30,70 +30,51 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <div class="row">
-        <div class="col-1 time">9AM</div>
-        <div hour='9' class="time-block col-10 hour" id='normal'>
-          <p class='description'></p>
-        </div>
+      <div hour='9' class="time-block row">
+        <div class="col-1 hour">9AM</div>
+          <p class='description col-10'></p>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
-      <div class="row">
-        <div class="col-1 time">10AM</div>
-        <div hour='10' class="time-block col-10 hour" id='normal'>
-          <p class='description'></p>
-        </div>
+      <div class="row time-block">
+        <div hour='10' class="col-1 hour">10AM</div>
+          <p class='description col-10'></p>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
-      <div class="row">
-        <div class="col-1 time">11AM</div>
-        <div hour='11' class="time-block col-10 hour" id='normal'>
-          <p class='description'></p>
-        </div>
+      <div hour='11' class="row time-block">
+        <div class="col-1 hour">11AM</div>
+          <p class='description col-10'></p>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
-      <div class="row">
-        <div class="col-1 time">12PM</div>
-        <div hour='12' class="time-block col-10 hour" id='normal'>
-          <p class='description'></p>
-        </div>
+      <div hour='12' class="row time-block">
+        <div class="col-1 hour">12PM</div>
+          <p class='description col-10'></p>
         <button class="saveBtn col-1 "><span class="oi oi-box"></span></button>
       </div>
-      <div class="row">
-        <div class="col-1 time">1PM</div>
-        <div hour='13' class="time-block col-10 hour" id='normal'>
-          <p class='description'></p>
-        </div>
-        <button  class="saveBtn col-1"><span class="oi oi-box"></span></button>
-      </div>
-      <div class="row">
-        <div class="col-1 time">2PM</div>
-        <div  hour='14' class="time-block col-10 hour" id='normal'>
-          <p class='description'></p>
-        </div>
+      <div hour='13' class="row time-block">
+        <div class="col-1 hour">1PM</div>
+          <p class='description col-10'></p>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
-      <div class="row">
-        <div class="col-1 time">3PM</div>
-        <div hour='15' class="time-block col-10 hour" id='normal'>
-          <p class='description'></p>
-        </div>
+      <div hour='14' class="row time-block">
+        <div class="col-1 hour">2PM</div>
+          <p class='description col-10'></p>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
-      <div class="row">
-        <div class="col-1 time">4PM</div>
-        <div hour='16' class="time-block col-10 hour" id='normal'>
-          <p class='description'></p>
-        </div>
+      <div hour='15' class="row time-block">
+        <div class="col-1 hour">3PM</div>
+          <p class='description col-10'></p>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
-      <div class="row">
-        <div class="col-1 time">5PM</div>
-        <div hour='17' class="time-block col-10 hour" id='normal'>
-          <p class='description'></p>
-        </div>
+      <div hour='16' class="row time-block">
+        <div class="col-1 hour">4PM</div>
+          <p class='description col-10'></p>
         <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
       </div>
-
+      <div hour='17' class="row time-block">
+        <div class="col-1 hour">5PM</div>
+          <p class='description col-10'></p>
+        <button class="saveBtn col-1"><span class="oi oi-box"></span></button>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
